Changed room status
